--- a/action.yml
+++ b/action.yml
@@ -36,3 +36,16 @@ runs:
     - name: Say goodbye
       run: echo "Goodbye ;)"
       shell: bash
+
+    - name: Set file
+      run: |
+        mkdir -p path/to/artifact
+        echo hello > path/to/artifact/world.txt
+      shell: bash
+
+    - name: Upload file
+      id: artifact-upload-step
+      uses: actions/upload-artifact@v4
+      with:
+        name: my-artifact
+        path: path/to/artifact/world.txt
