Enable add-pr-message and add permission write

--- a/action.yml
+++ b/action.yml
@@ -50,8 +50,8 @@ runs:
         name: my-artifact
         path: path/to/artifact/world.txt
 
-    # - name: Report message
-    #   uses: mshick/add-pr-comment@v2
-    #   with:
-    #     message: |
-    #       Hello World!
+    - name: Report message
+      uses: mshick/add-pr-comment@v2
+      with:
+        message: |
+          Hello World!
