--- a/.github/workflows/hello-world-action.yml
+++ b/.github/workflows/hello-world-action.yml
@@ -3,6 +3,8 @@ on: [push, pull_request]
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     name: A job to say hello
     steps:
       - uses: actions/checkout@v4
